kubernetes/apps/personal-site/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: personal-site
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
